--- a/IrcBot.Title/IrcBot.Title.csproj
+++ b/IrcBot.Title/IrcBot.Title.csproj
@@ -36,7 +36,7 @@
       <HintPath>..\packages\HtmlAgilityPack.1.4.6\lib\Net40\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="Meebey.SmartIrc4net">
-      <HintPath>..\..\..\..\..\src\SmartIrc4net\bin\debug\Meebey.SmartIrc4net.dll</HintPath>
+      <HintPath>..\lib\Meebey.SmartIrc4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
