--- a/IrcBot.Utils/IrcBot.Utils.csproj
+++ b/IrcBot.Utils/IrcBot.Utils.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Meebey.SmartIrc4net">
-      <HintPath>..\..\..\..\..\src\SmartIrc4net\bin\debug\Meebey.SmartIrc4net.dll</HintPath>
+      <HintPath>..\lib\Meebey.SmartIrc4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
