--- a/IrcBot/IrcBot.csproj
+++ b/IrcBot/IrcBot.csproj
@@ -34,10 +34,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net">
-      <HintPath>..\..\..\..\..\src\smuxi\lib\log4net.dll</HintPath>
+      <HintPath>..\lib\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Meebey.SmartIrc4net">
-      <HintPath>..\..\..\..\..\src\SmartIrc4net\bin\debug\Meebey.SmartIrc4net.dll</HintPath>
+      <HintPath>..\lib\Meebey.SmartIrc4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
